--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -698,8 +698,8 @@ h3 {
 }
 
 .header-area .main-header-area .main-menu {
-    text-align: center;
-    padding: 12px 0
+    /* text-align: center; */
+    padding: 12px 40px;
 }
 
 .header-area .main-header-area .main-menu ul li {
@@ -886,15 +886,15 @@ h3 {
 }
 
 .header-area .main-header-area.sticky .main-menu {
-    padding: 0
+    padding: 0 15px;
 }
 
 .slider_bg_1 {
-    background-image: url(../img/banner/banner.png)
+    background-image: url(../img/banner/banner-01.jpeg)
 }
 
 .slider_bg_2 {
-    background-image: url(../img/banner/banner2.png)
+    background-image: url(../img/banner/banner-02.jpeg)
 }
 
 .slider_area .single_slider {
@@ -1435,7 +1435,8 @@ h3 {
     }
 }
 
-.features_room .rooms_here .single_rooms .room_thumb .room_heading a {
+.features_room .rooms_here .single_rooms .room_thumb .room_heading a,
+.features_room .rooms_here .single_rooms .room_thumb .room_heading button {
     color: #fff;
     text-transform: capitalize;
     font-weight: 600;
@@ -1449,7 +1450,8 @@ h3 {
     visibility: hidden
 }
 
-.features_room .rooms_here .single_rooms .room_thumb .room_heading a:hover {
+.features_room .rooms_here .single_rooms .room_thumb .room_heading a:hover,
+.features_room .rooms_here .single_rooms .room_thumb .room_heading button:hover {
     color: #009DFF
 }
 
@@ -1461,7 +1463,8 @@ h3 {
     transform: scale(1.1)
 }
 
-.features_room .rooms_here .single_rooms:hover .room_heading a {
+.features_room .rooms_here .single_rooms:hover .room_heading a,
+.features_room .rooms_here .single_rooms:hover .room_heading button {
     -webkit-transform: translateY(0px);
     -moz-transform: translateY(0px);
     -ms-transform: translateY(0px);
