update: background image thumbnail video bumper

--- a/assets/front/css/shortcodes.css
+++ b/assets/front/css/shortcodes.css
@@ -1203,7 +1203,7 @@ form.form-search button {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../images/box-item/video-1.jpg);
+    background-image: url(../images/thumbnail/video-bumper.png);
     position: relative;
 }
 
